--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
