--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
